added symlink for ubuntu node.js

--- a/mytube60-new/Dockerfile
+++ b/mytube60-new/Dockerfile
@@ -31,3 +31,4 @@ RUN echo "==> fetch all sbt jars from Maven repo..."       && \
 #Node
 RUN apt-get -y update
 RUN apt-get -y install nodejs npm
+RUN ln -s /usr/bin/nodejs /usr/bin/node
