allow for config s3 endpoint

--- a/udata-tallyho/hub/src/main/resources/application.conf
+++ b/udata-tallyho/hub/src/main/resources/application.conf
@@ -18,6 +18,34 @@ udata-hub {
     aws-key=${AWS_KEY}
     aws-secret=${AWS_SECRET}
     directory-bucket=${AWS_BUCKET}
+    s3-endpoint="s3-external-1.amazonaws.com"
+  }
+
+}
+
+spray.can {
+
+  server {
+    request-timeout = infinite
+    idle-timeout = infinite
+    connecting-timeout = 20s
+    request-chunk-aggregation-limit = 0
+    chunkhandler-registration-timeout = 5s
+    bind-timeout = 10s
+    pipelining-limit = 50
+  }
+
+  client {
+    request-timeout = infinite
+    idle-timeout = infinite
+    connecting-timeout = 20s
+    response-chunk-aggregation-limit = 0
+  }
+
+  host-connector {
+    max-connections = 10
+    pipelining = on
+    max-redirects = 5
   }
 
 }
