added new options

--- a/rtmp-nginx/config.toml
+++ b/rtmp-nginx/config.toml
@@ -9,6 +9,8 @@ keys = [
     "/done/url",
     "playdone/url",
     "/publishdone/url",
+    "/update/url",
+    "/update/timeout",
     "dash",
     "hls"
 ]
