--- a/ffmpeg-small/Dockerfile
+++ b/ffmpeg-small/Dockerfile
@@ -8,10 +8,11 @@ RUN apk add --update build-base curl nasm tar bzip2 \
   curl -s https://ffmpeg.org/releases/ffmpeg-${FFMPEG_VERSION}.tar.gz | tar zxvf - -C . && \
   cd ffmpeg-${FFMPEG_VERSION} && \
   ./configure \
-#    --enable-version3 --enable-gpl --enable-small --enable-avresample --disable-bsfs --disable-devices --disable-hwaccels --disable-encoders --disable-decoders --disable-muxers --disable-demuxers --disable-filters \
-    --enable-version3 --enable-gpl --enable-small --enable-avresample --disable-bsfs --disable-devices --disable-hwaccels --disable-filters --disable-demuxers --disable-decoders \
+    --enable-version3 --enable-gpl --enable-small --enable-avresample --disable-bsfs --disable-devices --disable-hwaccels --disable-filters --disable-demuxers --disable-decoders --disable-muxers --disable-encoders \
     --enable-demuxer=aac --enable-demuxer=h264 --enable-demuxer=flv --enable-demuxer=live_flv \
+    --enable-muxer=h264 --enable-muxer=flv \
     --enable-decoder=aac --enable-decoder=h264 --enable-decoder=flv \ 
+    --enable-encoder=aac --enable-encoder=libx264 --enable-encoder=flv \ 
     --enable-libx264 \
     --enable-librtmp \
     --enable-filter=scale \
