added fixed missing

--- a/swift-5-dev/Dockerfile
+++ b/swift-5-dev/Dockerfile
@@ -1,3 +1,6 @@
 FROM swift:5.0.1-xenial
 
-RUN apt-get install -y zlib1g-dev libssl-dev libidn2-0 libnghttp2-14 libpsl-dev libunistring-dev libidn11 libgd-dev
+# HINT: run ldd <binary_location> to find linking locations
+# https://superuser.com/questions/239590/find-libraries-a-binary-was-linked-against
+RUN apt-get update --fix-missing
+RUN apt-get install -y libssl-dev libidn2-0 libnghttp2-14 libpsl-dev libunistring-dev libidn11 libgd-dev
